# termmaid

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
demo/: demo.tape  flowchart.mmd  gitgraph.mmd  sequence.mmd
src/termaid/: __init__.py  __main__.py  cli.py  ingest.py  utils.py
src/termaid/graph/: __init__.py  model.py  shapes.py
src/termaid/layout/: __init__.py  grid.py  placement.py  subgraphs.py
src/termaid/model/: blockdiagram.py  classdiagram.py  erdiagram.py  gitgraph.py  journey.py  kanban.py  packet.py  quadrant.py  sequence.py  timeline.py  treemap.py
src/termaid/output/: rich.py  text.py  widget.py
src/termaid/parser/: __init__.py  architecture.py  blockdiagram.py  classdiagram.py  erdiagram.py  flowchart.py  gitgraph.py  journey.py  kanban.py  packet.py  quadrant.py  sequence.py  statediagram.py  timeline.py  tokens.py  treemap.py
src/termaid/renderer/: __init__.py  blockdiagram.py  canvas.py  charset.py  classdiagram.py  draw.py  (+13 more)
src/termmaid/: cli.py
tests/: test_architecture.py  test_blockdiagram.py  test_classdiagram.py  test_cli.py  test_edge_styles.py  test_erdiagram.py  test_gantt.py  test_gitgraph.py  test_i18n.py  test_integration.py  test_journey.py  test_kanban.py  test_layout.py  test_packet.py  test_parser.py  test_parser_comprehensive.py  test_piechart.py  test_quadrant.py  test_renderer.py  test_rendering_quality.py  test_routing.py  test_sequence.py  test_shapes.py  test_snapshots.py  test_state_diagram.py  test_themes.py  test_timeline.py  test_treemap.py  test_warnings.py  test_xychart.py
(+30 files in other folders)
