[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "termaid"
version = "0.1.3"
description = "Render Mermaid diagram syntax as beautiful Unicode art in the terminal"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["mermaid", "diagram", "terminal", "unicode", "ascii", "flowchart"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: General",
    "Topic :: Utilities",
]

[project.optional-dependencies]
rich = ["rich>=13.0"]
textual = ["textual>=0.40"]
dev = [
    "pytest>=7.0",
    "pytest-snapshot",
]

[project.scripts]
termaid = "termaid.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/termaid"]

[tool.pytest.ini_options]
testpaths = ["tests"]
